# picolife

./: CMakeLists.txt  README.md  cellpattern.cpp  cellpattern.hpp  cells.hpp  colourvector.cpp  colourvector.hpp  gridSetup.cpp  gridSetup.hpp  ledarray.cpp  ledarray.hpp  ledimage.cpp  ledimage.hpp  main.cpp  pin_mapping.hpp  pioCommunicator.cpp  pioCommunicator.hpp  sparselife.cpp  sparselife.hpp
leddriver/: CMakeLists.txt
leddriver/apps/: CMakeLists.txt  squareDiagonal.cpp  testCard.cpp
leddriver/include/leddriver/: ledarray.hpp  ledimage.hpp  pin_mapping.hpp  pioCommunicator.hpp  utility.hpp
leddriver/src/: CMakeLists.txt  led_line.pio  ledarray.cpp  ledimage.cpp  pioCommunicator.cpp  utility.cpp
sparselife/: CMakeLists.txt
sparselife/include/sparselife/: cellpattern.hpp  sparselife.hpp  types.hpp
sparselife/src/: CMakeLists.txt  cellpattern.cpp  sparselife.cpp
